# OpenGJK-GPU

./: .gitignore  CMakeLists.txt  FunctionUsage.md  OLDREADME.md  README.md  cpu_openGJK_wrapper.c
GJK/: CMakeLists.txt  common.h  openGJK.cu  openGJK.h
GJK/cpu/: EPA.c  EPA.h  openGJK.c  openGJK.h
GJK/gpu/: openGJK.cu  openGJK.h  warpParallelGJK.cu  warpParallelGJK.h
data/: data_32bit.csv  data_32bit_4070  data_64bit.csv  gpu_performance_results.csv
examples/: example.cu  example.h  main.cpp
examples/common/: timer.h
examples/cpu/: example.cpp  example.h
examples/gpu/: example.cu  example.h
examples/usage/: CMakeLists.txt  EPAUsage.c  EPAUsage.cpp  GJKUsage.c  main.c
plotting/: create_plots.py
visualization/: CMakeLists.txt  README.md  build_final.bat  build_opengl.bat  camera.cpp  camera.h  gjk_integration.c  gjk_integration.h  gpu_gjk_interface.h  input.cpp  integrate_final_gjk.cu  main.c  main_opengl.cpp  opengl_renderer.cpp  scan_kernels.cuh  sim_api.h  sim_config.h
visualization/glad/include/glad/: glad.h
visualization/glad/src/: glad.c
visualization/include/tinyobj/: tiny_obj_loader.cc  tiny_obj_loader.h
visualization/include/v-hacd/: VHACD.h
visualization/old_raylib/: build_final.bat  main.c
visualization/rendering/: camera.cpp  camera.h  input.cpp  input.h  mesh_builder.cpp  mesh_builder.h  opengl_renderer.cpp  opengl_renderer.h
visualization/shaders/: ground.frag  ground.vert  object.frag  object.vert  sky.frag  sky.vert  sphere_solid.frag  sphere_solid.vert  sphere_wireframe.frag  sphere_wireframe.vert
visualization/utils/: detect_gpu_arch.cu  scan_kernels.cuh
